fixed image sizes on tablet & phone (different sizes)

--- a/css/style.scss
+++ b/css/style.scss
@@ -307,7 +307,19 @@ ul.fakta-content{
     margin-bottom: 50px;
 }
 
+@media (max-width: 1000px) {
+#clip {
+    height: 500px;
+    width: 500px;
+}
+}
 
+@media (max-width: 600px) {
+    #clip {
+        height: 300px;
+        width: 300px;
+    }
+    }
 
 
 @media (max-width: 1000px) {
